<resources>

    <string name="app_name">GitHub Client</string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main2">GitHub Client</string>
    <string name="title_activity_user_info">User info</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_repos_list">User repositories</string>
    <string name="title_activity_edit_user">Edit user</string>

    <string name="title_name">Name</string>
    <string name="title_company">Company</string>
    <string name="title_email">Email</string>
    <string name="title_public_repos">Public\nrepos</string>
    <string name="title_public_gists">Public\ngists</string>
    <string name="title_total_private_repos">Total\nprivate repos</string>
    <string name="title_owned_private_repos">Owned\nprivate repos</string>
    <string name="title_private_gists">Private\ngists</string>
    <string name="title_followers">Followers</string>
    <string name="title_following">Following</string>
    <string name="title_repositories">REPOSITORIES</string>
    <string name="title_view_more">VIEW MORE REPOSITORIES</string>
    <string name="title_no_repos">Repositories not found</string>
    <string name="title_no_users">Users not found</string>

    <string name="action_edit">Edit</string>
    <string name="action_logout">Sign out</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_repeat">Repeat</string>

    <string name="msg_no_connection">No connection</string>
    <string name="msg_no_connection_dialog">No connection. Try again?</string>
    <string name="msg_failed_response">Failed response.</string>
    <string name="msg_try_later">Too many attempts. Please try later.</string>



</resources>
