<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_scroll">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/normal_margin"
                    android:paddingTop="@dimen/half_margin">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_height="@dimen/avatar_height"
                            app:srcCompat="@mipmap/ic_launcher"
                            android:id="@+id/image_user_avatar"
                            android:layout_width="@dimen/avatar_height"
                            android:layout_margin="@dimen/half_margin"
                            android:layout_gravity="center" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/half_margin"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/text_user_login"
                                android:textSize="24sp"
                                android:textColor="@android:color/black"
                                android:layout_marginBottom="@dimen/fourth_margin"
                                android:layout_marginLeft="@dimen/fourth_margin"
                                android:layout_marginRight="@dimen/fourth_margin" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/text_user_name"
                                android:drawableLeft="@drawable/ic_person"
                                android:drawableStart="@drawable/ic_person"
                                android:drawablePadding="@dimen/half_margin"
                                android:layout_marginBottom="2dp"
                                android:layout_marginLeft="@dimen/half_margin"
                                android:layout_marginStart="@dimen/half_margin"
                                android:visibility="gone" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/text_user_email"
                                android:drawableLeft="@drawable/ic_mail"
                                android:drawableStart="@drawable/ic_mail"
                                android:drawablePadding="@dimen/half_margin"
                                android:layout_marginBottom="2dp"
                                android:layout_marginLeft="@dimen/half_margin"
                                android:layout_marginStart="@dimen/half_margin"
                                android:visibility="gone" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/text_user_location"
                                android:drawableLeft="@drawable/ic_place"
                                android:drawableStart="@drawable/ic_place"
                                android:drawablePadding="@dimen/half_margin"
                                android:layout_marginBottom="2dp"
                                android:layout_marginLeft="@dimen/half_margin"
                                android:layout_marginStart="@dimen/half_margin"
                                android:visibility="gone" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/text_user_company"
                                android:drawableLeft="@drawable/ic_company"
                                android:drawableStart="@drawable/ic_company"
                                android:drawablePadding="@dimen/half_margin"
                                android:layout_marginLeft="@dimen/half_margin"
                                android:layout_marginStart="@dimen/half_margin"
                                android:visibility="gone" />

                        </LinearLayout>

                    </LinearLayout>

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/half_margin"
                        android:layout_marginTop="@dimen/half_margin">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_repos"
                            android:layout_row="0"
                            android:layout_column="0"
                            android:gravity="center"
                            android:textSize="24sp"
                            android:textColor="@android:color/black"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1"
                            android:layout_columnWeight="1" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_gists"
                            android:layout_row="0"
                            android:layout_column="1"
                            android:gravity="center"
                            android:textSize="24sp"
                            android:textColor="@android:color/black"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1"
                            android:layout_columnWeight="1" />

                        <TextView
                            android:text="@string/title_public_repos"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_row="1"
                            android:layout_column="0"
                            android:gravity="center"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1"
                            android:layout_columnWeight="1" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_user_followers"
                            android:layout_row="0"
                            android:layout_column="2"
                            android:gravity="center"
                            android:textSize="24sp"
                            android:textColor="@android:color/black"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1"
                            android:layout_columnWeight="1" />

                        <TextView
                            android:text="@string/title_followers"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_row="1"
                            android:layout_column="2"
                            android:gravity="center"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1"
                            android:layout_columnWeight="1" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_user_following"
                            android:layout_row="0"
                            android:layout_column="3"
                            android:gravity="center"
                            android:textSize="24sp"
                            android:textColor="@android:color/black"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1"
                            android:layout_columnWeight="1" />

                        <TextView
                            android:text="@string/title_following"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_row="1"
                            android:layout_column="3"
                            android:gravity="center"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1"
                            android:layout_columnWeight="1" />

                        <TextView
                            android:text="@string/title_public_gists"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_row="1"
                            android:layout_column="1"
                            android:gravity="center"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1"
                            android:layout_columnWeight="1" />

                    </GridLayout>

                    <GridLayout
                        android:id="@+id/panel_private"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="4"
                        android:layout_marginTop="@dimen/half_margin"
                        android:layout_marginBottom="@dimen/half_margin">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_row="1"
                            android:layout_column="2"
                            android:layout_columnWeight="1"
                            android:gravity="center"
                            android:text="@string/title_owned_private_repos"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_owned_repos"
                            android:layout_row="0"
                            android:layout_column="2"
                            android:layout_columnWeight="1"
                            android:textSize="24sp"
                            android:textColor="@android:color/black"
                            android:gravity="center"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_privte_gists"
                            android:layout_row="0"
                            android:layout_columnWeight="1"
                            android:layout_column="0"
                            android:textSize="24sp"
                            android:textColor="@android:color/black"
                            android:gravity="center"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_total_repos"
                            android:layout_row="0"
                            android:layout_columnWeight="1"
                            android:layout_column="1"
                            android:textSize="24sp"
                            android:textColor="@android:color/black"
                            android:gravity="center"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_row="1"
                            android:layout_columnWeight="1"
                            android:layout_column="0"
                            android:gravity="center"
                            android:text="@string/title_private_gists"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_row="1"
                            android:layout_columnWeight="1"
                            android:layout_column="1"
                            android:gravity="center"
                            android:text="@string/title_total_private_repos"
                            android:layout_gravity="fill_horizontal"
                            android:layout_columnSpan="1" />
                    </GridLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/half_margin">

                    <TextView
                        android:text="@string/title_repositories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:layout_margin="@dimen/half_margin" />

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/view_repos" />

                    <TextView
                        android:text="@string/title_no_repos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_no_repos"
                        android:textStyle="italic"
                        android:layout_margin="@dimen/half_margin" />

                    <TextView
                        android:text="@string/title_view_more"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical|start"
                        android:drawableRight="@drawable/ic_chevron_right"
                        android:drawableEnd="@drawable/ic_chevron_right"
                        android:layout_gravity="center"
                        android:drawablePadding="@dimen/half_margin"
                        android:id="@+id/text_next"
                        android:padding="@dimen/half_margin" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/progress_bar_user"
        android:layout_gravity="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingTop="@dimen/button_margin_top">

        <TextView
            android:text="@string/msg_no_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginBottom="@dimen/half_margin" />

        <Button
            android:text="@string/button_repeat"
            android:layout_height="wrap_content"
            android:id="@+id/button_repeat"
            android:layout_width="@dimen/button_width"
            android:layout_gravity="center" />
    </LinearLayout>

</LinearLayout>